[package]
name = "quik-rs"
version = "24.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
core = { path = "../core", version = "24.1" }
fastwebsockets = {version = "0.7", features = ["upgrade"]}
http-body-util = "0.1"
hyper = "1.2"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
rustls-pki-types = "1.3"
webpki-roots = "0.26"
